--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -11,6 +11,6 @@
 android:id="@+id/fragment_container_view"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-android:name="com.example.taskmvc.View.AddTaskFragment" />
+android:name="com.example.taskmvp.View.AddTaskFragment" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
