--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F5F1FE"
-    tools:context=".MainActivity">
+    tools:context=".View.MainActivity">
 
     <FrameLayout
         android:id="@+id/mainFragment"
