--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,7 +5,7 @@
         which is required for Material components like BottomNavigationView to work correctly.
         Using a .NoActionBar variant allows you to define your own app bar if needed.
     -->
-    <style name="Theme.TaskMVC" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Theme.TaskMVP" parent="Theme.Material3.DayNight.NoActionBar">
         <!--
             Customize your light theme here.
             You can define primary colors, secondary colors, font styles, etc.
